Fix flex alignment for examples on smaller screens

--- a/site/style.scss
+++ b/site/style.scss
@@ -66,6 +66,7 @@ main {
 
     @media screen and (max-width: 1024px) {
       flex-direction: column;
+      align-items: center;
     }
 
     > div {
